appId: ${APP_ID ?? "app.exactly"}
---
- tapOn: Card
- tapOn: Card details
- waitForAnimationToEnd
- runFlow:
    when: { visible: Accept and enable card }
    commands:
      - runFlow: { file: scrollTo.yaml, env: { element: Accept and enable card } }
      - tapOn: Accept and enable card
- runFlow:
    when: { platform: web }
    commands:
      - assertVisible: Manually add your card to Apple Pay & Google Pay to make contactless payments.
- tapOn: Close
- tapOn: Freeze card
- tapOn: { text: Freeze card, below: "Freeze your card?" }
- assertNotVisible: "Freeze your card?"
- waitForAnimationToEnd
- tapOn: Freeze card
- waitForAnimationToEnd
- tapOn: Freeze card
- assertVisible: Freeze your card?
- tapOn: Cancel
- tapOn: View PIN number
- tapOn: Close
- tapOn: Weekly spending limit
- tapOn: Close
- runFlow: { file: ../subflows/tapAria.yaml, env: { aria: Hide sensitive } }
- runFlow:
    when: { true: "${maestro.platform != 'web'}" }
    commands:
      - assertNotVisible: \$[\s\d,.\xa0]+, AVAILABLE BALANCE
- runFlow:
    when: { platform: web }
    commands:
      - assertNotVisible:
          text: \$[\s\d,.\xa0]+
          above: Available balance
- runFlow: { file: ../subflows/tapAria.yaml, env: { aria: Show sensitive } }
- runFlow:
    when: { true: "${maestro.platform != 'web'}" }
    commands:
      - assertVisible: \$[\s\d,.\xa0]+, AVAILABLE BALANCE
- runFlow:
    when: { platform: web }
    commands:
      - assertVisible:
          text: \$[\s\d,.\xa0]+
          above: Available balance
- tapOn: Home
- runFlow: { file: scrollTo.yaml, env: { element: Exa Card pay mode } }
- tapOn:
    text: Learn more
    rightOf: Exa Card pay mode
- assertVisible: Change the pay mode before each purchase and pay how you want.
- tapOn: Close
- tapOn: Later in 1
- runFlow:
    when: { visible: How installment repayment works }
    commands:
      - tapOn: Close
- runFlow:
    when: { visible: Tap here to change the number of installments }
    commands:
      - tapOn: Tap here to change the number of installments
      - assertVisible: Choose how many installments to use for future card purchases. You can always change this before each purchase.
      - tapOn: Installments calculator
      - assertVisible: Enter a purchase amount
      - assertVisible: to estimate installment options
      - runFlow: { file: ../subflows/tapAria.yaml, env: { aria: Go back } }
- tapOn: Home
- runFlow: { file: scrollTo.yaml, env: { element: Later in 1 } }
- tapOn: Credit limit
- assertVisible: If you hold more than one asset, your limit is a weighted average across all of them. Any outstanding Pay Later balance also reduces your available credit limit.
- tapOn: Close
- tapOn: Now
- tapOn: Spending limit
- assertVisible: If your balance doesn’t cover a transaction, other assets in your wallet can make up the difference.
- tapOn: Close
- tapOn: Home
